# aleksay

./: README.md  aleksay.py  aleksay.sh  messages.txt  pyproject.toml
