[project]
name = "aleksay"
version = "0.0.1"
authors = [
  {name="tiago amemiya", email="author@example.com"},
  {name="ciro souza", email="author@example.com"},
]
description = "Então..."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tiagoamemiya/aleksay"
"Bug Tracker" = "https://github.com/tiagoamemiya/aleksay/issues"
